{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 64,
  "lineage": "530d4761-1aa3-93b8-98cb-291809201610",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088035088303:internet-gateway/igw-07378cd2bd27c6cea",
            "id": "igw-07378cd2bd27c6cea",
            "owner_id": "088035088303",
            "tags": {
              "Name": "My internet gateway"
            },
            "tags_all": {
              "Name": "My internet gateway"
            },
            "vpc_id": "vpc-08dbd94a14cb09d42"
          },
          "dependencies": [
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088035088303:network-acl/acl-01dde4416c107411f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-01dde4416c107411f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "088035088303",
            "subnet_ids": [],
            "tags": {
              "Name": "Public subnet"
            },
            "tags_all": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-08dbd94a14cb09d42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07378cd2bd27c6cea",
            "id": "r-rtb-07e49727fc419d14f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e49727fc419d14f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.My-IGW",
            "aws_route_table.My-public_RT",
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My-public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088035088303:route-table/rtb-07e49727fc419d14f",
            "id": "rtb-07e49727fc419d14f",
            "owner_id": "088035088303",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "Public Route Table"
            },
            "tags_all": {
              "name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dbd94a14cb09d42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1cfb20de6cee1a4",
            "route_table_id": "rtb-07e49727fc419d14f",
            "subnet_id": "subnet-0593f6a83f1f5b368"
          },
          "dependencies": [
            "aws_route_table.My-public_RT",
            "aws_subnet.PUBLIC_subnet",
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088035088303:security-group/sg-0dbe5880e83895d0e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Saida FULL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbe5880e83895d0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH to EC2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "177.200.196.98/32"
                ],
                "description": "meu IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "my-sg-vpc",
            "name_prefix": "",
            "owner_id": "088035088303",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08dbd94a14cb09d42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUBLIC_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088035088303:subnet/subnet-0593f6a83f1f5b368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593f6a83f1f5b368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088035088303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-08dbd94a14cb09d42"
          },
          "dependencies": [
            "aws_vpc.My-VPC-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-VPC-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088035088303:vpc/vpc-08dbd94a14cb09d42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065eb163da030f3b4",
            "default_route_table_id": "rtb-0e0103b207497ce04",
            "default_security_group_id": "sg-0e1baef6f443c5f92",
            "dhcp_options_id": "dopt-0735c48395d74af2c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08dbd94a14cb09d42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0103b207497ce04",
            "owner_id": "088035088303",
            "tags": {
              "Name": "My-VPC-tf"
            },
            "tags_all": {
              "Name": "My-VPC-tf"
            }
          }
        }
      ]
    }
  ]
}